# timetablebot

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  app.py  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  shorts.json
bot/: __init__.py
bot/events/: server.py
bot/handler/: admin.py  callbacks.py  commands.py
bot/keyboard/: inline.py
bot/scheduler/: mess.py
bot/state/: timetable.py
bot/utils/: database.py  filters.py  realdebrid.py  timetable.py
models/: users.py
static/: ECE and CSE 1st Sem Time-table Odd Sem 2023-24 - wef 20231005.xlsx  MESS MENU.xlsx  course_name.json  timetable.xlsx
